--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,6 @@ body {
   font-family: sans-serif;
 }
 
-
-/* widgets common */
-.widget {
-  width: 33%;
-  max-width: 300px;
-  height: 250px;
-  border: 2px solid rgb(125, 125, 125);
-  box-shadow: 3px 3px 3px rgba(0,0,0,0.1);
+.widget-body {
+  min-height: 100px;
 }
