--- a/src/containers/Dashboard.css
+++ b/src/containers/Dashboard.css
@@ -1,6 +1,7 @@
 .Dashboard {
-    background: white;
-    border-left: 1px solid #e7e7e7;
-    border-right: 1px solid #e7e7e7;
-    padding-top: 15px;
+  background: white;
+  border-left: 1px solid #e7e7e7;
+  border-right: 1px solid #e7e7e7;
+  padding-top: 15px;
+  min-height: calc(100vh);
 }
