css files are removed and ignored; a sass config file is added

--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -1,7 +1,9 @@
+@import "../../sass/config";
+
 .NavigationBar__refresh {
   margin-right: 10px;
 }
 
 .NavigationBar.navbar {
-  margin-bottom: 15px;
+  margin-bottom: $margin;
 }
