--- a/src/containers/Dashboard.scss
+++ b/src/containers/Dashboard.scss
@@ -1,7 +1,9 @@
+@import "../sass/config";
+
 .Dashboard {
   background: white;
   border-left: 1px solid #e7e7e7;
   border-right: 1px solid #e7e7e7;
-  padding-top: 15px;
+  padding-top: $margin;
   min-height: calc(100vh);
 }
