--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
+@import "sass/config";
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: #fdfdfd;
+  background: $outer-bg-color;
 }
