--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,2 +1,8 @@
+$outer-bg-color: #fdfdfd;
+$default-bg-color: #fff;
+
+$line-color: #e7e7e7;
+$line-thickness: 1px;
+
 $margin: 15px;
 $widget-body-min-height: 100px;
