--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,5 @@
+$main-color: #337ab7; // is taken from bootstrap ($brand-primary)
+
 $outer-bg-color: #fdfdfd;
 $default-bg-color: #fff;
 
@@ -6,6 +8,12 @@ $line-thickness: 1px;
 
 $margin: 15px;
 $widget-body-min-height: 100px;
+
+// bugs history chart
+// (note: the variables below are not used, they are added here only as a memo)
+$chart-grid-stroke: $line-color;
+$chart-axis-stroke: #777;
+$chart-bar-fill: #ff9c00;
 
 // to override default bootstrap variables
 // https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_variables.scss
