--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,24 @@
+@import "./sass/variables";
 @import "./sass/bootstrap-custom";
+
+.panel-heading {
+  padding: $space-medium 0 0 $space-medium;
+  font-size: 22px;
+  font-weight: 100;
+  color: $rocket-gray;
+  letter-spacing: .04em;
+}
+
+.panel {
+  margin-bottom: $space-large;
+  min-height: $widget-height;
+}
+
+.number-big {
+  font-size: $font-huge;
+  color: $main-color;
+}
+
+.number-normal {
+  font-size: $font-big;
+}
