--- a/src/containers/Dashboard.scss
+++ b/src/containers/Dashboard.scss
@@ -1,9 +1,12 @@
 @import 'variables';
 
 .Dashboard {
-  background: $default-bg-color;
-  border-left: $line-thickness solid $line-color;
-  border-right: $line-thickness solid $line-color;
-  padding-top: $margin;
+  padding-top: 0;
   min-height: calc(100vh);
+}
+
+body {
+  background: $default-bg-color;
+  padding: $space-medium;
+  font-family: 'Assistant', sans-serif;
 }
