--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,8 @@
 // colors
-$main-color: #1986FF;
-$outer-bg-color: #fdfdfd;
+$main-color: #1986ff;
 $default-bg-color: #f1f6f8;
-$line-color: #e7e7e7;
 $rocket-gray: #b7b7b7;
+
 // spaces
 $space-small : 5px;
 $space-medium: 15px;
@@ -14,6 +13,7 @@ $space-extra-large: 60px;
 $font-huge: 144px;
 $font-big: 48px;
 $font-normal: 28px;
+$font-small: 18px;
 
 $line-thickness: 1px;
 
@@ -21,9 +21,9 @@ $widget-height: 300px;
 
 // bugs history chart
 // (note: the variables below are not used, they are added here only as a memo)
-$chart-grid-stroke: $line-color;
-$chart-axis-stroke: #777;
-$chart-bar-fill: #1986FF;
+$chart-grid-stroke: #e7e7e7;
+$chart-axis-stroke: $rocket-gray;
+$chart-bar-fill: $main-color;
 
 // to override default bootstrap variables
 // https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_variables.scss
