--- a/src/components/BugsHistory/BugsHistory.scss
+++ b/src/components/BugsHistory/BugsHistory.scss
@@ -1,6 +1,8 @@
 @import 'variables';
 
-.bugs-current {
-  font-size: $font-big;
-  color: $rocket-gray;
+.widget--bugshistory {
+  .bugs-current {
+    font-size: $font-big;
+    color: $rocket-gray;
+  }
 }
