--- a/src/components/BugsHistory/BugsHistory.scss
+++ b/src/components/BugsHistory/BugsHistory.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.widget--bugshistory {
+.BugsHistory {
   .bugs-current {
     font-size: $font-big;
     color: $rocket-gray;
