--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.navigationbar {
+.NavigationBar {
   margin-left: $space-medium;
   margin-right: $space-medium;
   padding-top: 15px;
