Inject .css in body (when dev server); small .scss tweaks

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import "./sass/bootstrap-custom";
-@import "variables";
-@import "panel";
-@import "scaffolding";
+@import "./sass/variables";
+@import "./sass/panels";
+@import "./sass/scaffolding";
 
 .number-big {
   font-size: $font-huge;
