flat design twek - no border-radius

--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -32,6 +32,7 @@
       background-color: transparent;
       color: $main-color;
       outline: none;
+      cursor: pointer;
     }
 
     button:hover {
