--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,6 +3,8 @@ $main-color: #1986ff;
 $default-bg-color: #f1f6f8;
 $rocket-gray: #b7b7b7;
 $widget-border-color: #e5e5e5;
+$green: #9bb209;
+$red: #ff2b19;
 
 // spaces
 $space-small : 5px;
