--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -2,6 +2,7 @@
   margin-bottom: $space-large;
   min-height: $widget-height;
   border-color: $widget-border-color;
+  overflow: hidden;   // fixes a layout issue on IE11
 }
 
 .panel-heading {
