change compare/previous to percentage

--- a/src/widgets/Number/components/Number.scss
+++ b/src/widgets/Number/components/Number.scss
@@ -1,13 +1,19 @@
 @import "variables";
 
 .Number {
-  .number-big {
+  .current {
     font-size: $font-huge;
     color: $main-color;
   }
 
-  .number-normal {
+  .previous {
     font-size: $font-big;
     color: $rocket-gray;
+    &.positiv:before {
+      content: '⬆️';
+    }
+    &.negativ:before {
+      content: '⬇️️';
+    }
   }
 }
