better change percentage display; rename scss variables to be more specific; rename className;

--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -27,7 +27,7 @@
     padding: 0 $space-small;
 
     button {
-      font-size: $font-small;
+      font-size: $font-size-small;
       border-color: transparent;
       background-color: transparent;
       color: $main-color;
