--- a/src/widgets/JiraIssues/components/JiraIssues.scss
+++ b/src/widgets/JiraIssues/components/JiraIssues.scss
@@ -9,7 +9,7 @@
   .label {
     width: 33%;
     text-align: center;
-    font-size: $font-small;
+    font-size: $font-size-small;
     overflow: hidden;
   }
 
