better change percentage display; rename scss variables to be more specific; rename className;

--- a/src/widgets/Number/components/Number.scss
+++ b/src/widgets/Number/components/Number.scss
@@ -7,13 +7,16 @@
   }
 
   .change {
-    font-size: $font-size-big;
+    font-size: $font-size-normal;
     color: $rocket-gray;
-    &.positiv:before {
-      content: '⬆️';
+    &:before {
+      content: '\25b6';
     }
-    &.negativ:before {
-      content: '⬇️️';
+    &.increase:before {
+      content: '▲';
+    }
+    &.decrease:before {
+      content: '▼';
     }
   }
 }
