--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,12 +13,10 @@ $space-large: 30px;
 $space-extra-large: 60px;
 
 // font-sizes
-$font-huge: 144px;
-$font-big: 48px;
-$font-normal: 28px;
-$font-small: 18px;
-
-$line-thickness: 1px;
+$font-size-huge: 144px;
+$font-size-big: 48px;
+$font-size-normal: 30px;
+$font-size-small: 18px;
 
 $widget-height: 300px;
 
