positive/negative dynamics are highlighted appropriately

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,8 @@ $rocket-gray: #b7b7b7;
 $widget-border-color: #e5e5e5;
 $green: #9bb209;
 $red: #ff2b19;
+$negative-color: $red;
+$positive-color: $green;
 
 // spaces
 $space-small : 5px;
