--- a/src/widgets/Number/components/Number.scss
+++ b/src/widgets/Number/components/Number.scss
@@ -19,5 +19,11 @@
     &.decrease:before {
       content: '▼';
     }
+    &.positive {
+      color: $positive-color;
+    }
+    &.negative {
+      color: $negative-color;
+    }
   }
 }
