--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -28,6 +28,10 @@ $navbar-margin-bottom: 10px;
 // widget
 $widget-height: 260px;
 
+// Charts
+$charts-rectangle-fill: #1986ff;
+$charts-label-fill: #1986ff;
+
 // bugs history chart
 // (note: the variables below are not used, they are added here only as a memo)
 $chart-grid-stroke: #e7e7e7;
