--- a/src/widgets/JiraIssues/components/JiraIssues.scss
+++ b/src/widgets/JiraIssues/components/JiraIssues.scss
@@ -1,9 +1,48 @@
 @import "variables";
 
 .JiraIssues {
+  $blocker-color: #ff2b19;
+  $critical-color: #ff796e;
+  $others-color: #ffb8b2;
+
+  .recharts-x-axis,
+  .recharts-y-axis {
+    display: none;
+  }
+
+  .HorizontalBarChart {
+    margin-left: -60px;
+  }
+
+  .recharts-surface {
+    overflow: visible;
+  }
+
+  .recharts-bar {
+    .recharts-bar-rectangle:first-of-type {
+      fill: $blocker-color;
+    }
+    .recharts-bar-rectangle:nth-of-type(2n+2) {
+      fill: $critical-color;
+    }
+    .recharts-bar-rectangle {
+      fill: $others-color;
+    }
+  }
+  .recharts-bar-labels {
+    .recharts-bar-label:first-of-type {
+      fill: $blocker-color;
+    }
+    .recharts-bar-label:nth-of-type(2n+2) {
+      fill: $critical-color;
+    }
+    .recharts-bar-label {
+      fill: $others-color;
+    }
+  }
+
   .labels-container {
     display: flex;
-    margin: 0 11%;
   }
 
   .label {
@@ -11,21 +50,14 @@
     text-align: center;
     font-size: $font-size-small;
     overflow: hidden;
+    color: $others-color;
   }
 
   .label-blockers {
-    color: #ff2b19;
+    color: $blocker-color;
   }
 
   .label-criticals {
-    color: #ff796e;
-  }
-
-  .label-others {
-    color: #ffb8b2;
-  }
-
-  .recharts-surface {
-    overflow: visible;
+    color: $critical-color;
   }
 }
