--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -1,14 +1,17 @@
 .panel {
-  margin-bottom: $space-large;
+  margin-bottom: $grid-gutter-width;
   min-height: $widget-height;
   border-color: $widget-border-color;
   overflow: hidden;   // fixes a layout issue on IE11
-}
 
-.panel-heading {
-  padding: $space-medium 0 0 $space-medium;
-  font-size: 22px;
-  font-weight: 100;
-  color: $rocket-gray;
-  letter-spacing: .04em;
+  .panel-heading {
+    height: 52px;
+    padding: $space-medium 0 $space-medium $space-medium;
+    font-size: 22px;
+    color: darken($rocket-gray, 25%);
+    letter-spacing: .04em;
+  }
+  .panel-body {
+    padding: 0 $space-medium $space-medium $space-medium;
+  }
 }
