--- a/src/widgets/Number/components/Number.scss
+++ b/src/widgets/Number/components/Number.scss
@@ -13,6 +13,8 @@
     display: inline-block;
     font-size: $font-size-normal;
     color: $rocket-gray;
+    line-height: 10px;
+
     &:before {
       content: '\25b6';
       margin: 0 4px 0 0;
