--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -17,7 +17,6 @@
     font-size: 24px;
     color: $widget-heading-color;
     letter-spacing: .04em;
-    text-transform: capitalize;
   }
   .panel-body {
     min-height: 155px;
@@ -29,7 +28,7 @@
     background: $panel-bg;
     font-size: $font-size-small;
     line-height: $font-size-small;
-    color: $widget-heading-color;
+    color: $rocket-gray;
     &::first-letter {
       text-transform: uppercase;
     }
