Update Rocket logo

--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -9,7 +9,7 @@
   }
 
   .navbar-left {
-    color: $rocket-gray;
+    color: $rocket-dark;
     font-size: 22px;
     font-weight: bold;
     letter-spacing: .04em;
