--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,7 @@ $grid-gutter-width: 20px;
 $main-color: #1986ff;
 $default-bg-color: #f1f6f8;
 $rocket-gray: #b7b7b7;
+$rocket-dark: #2D3239;
 $green: #9bb209;
 $red: #ff2b19;
 $negative-color: $red;
