Fixed displaying NaN for number widget. Display unknown on error.

--- a/src/widgets/Number/components/Number.scss
+++ b/src/widgets/Number/components/Number.scss
@@ -1,6 +1,10 @@
 @import "variables";
 
 .Number {
+  .loading {
+    color: $main-color;
+    font-size: 32px;
+  }
   .current {
     font-size: $font-size-huge;
     color: $main-color;
