--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -1,6 +1,7 @@
 body {
   background: $default-bg-color;
-  padding: $space-medium;
+  padding: 0;
+  margin: 0;
   font-family: 'Assistant', sans-serif;
   font-weight: 300;
 }
