--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import "./sass/variables";
 @import "./sass/bootstrap-custom";
-@import "./sass/panels";
 @import "./sass/scaffolding";
-
+@import "./sass/panels";
+@import "./sass/navbar";
