--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -4,8 +4,8 @@
   position: relative;
   min-height: $widget-height;
   margin-bottom: $grid-gutter-width;
-  border-color: $widget-border-color;
   overflow: hidden;   // fixes a layout issue on IE11
+  background-color: $panel-bg;
 
   @media(min-width:768px){
     height: $widget-height;
@@ -14,9 +14,10 @@
   .panel-heading {
     height: 52px;
     padding: $space-medium 0 $space-medium $space-medium;
-    font-size: 24px;
+    font-size: 20px;
     color: $widget-heading-color;
     letter-spacing: .04em;
+    background-color: $light-bg-color;
   }
   .panel-body {
     min-height: 155px;
@@ -34,4 +35,35 @@
     }
   }
 
+  &:not([class*="panel-"]) > .panel-heading {
+    color: $widget-heading-color;
+    border: 0;
+  }
+}
+
+// Laptop screen
+@media (min-width: $screen-md-min) {
+  .panel {
+    .panel-heading {
+      font-size: 16px;
+    }
+  }
+}
+
+// Desktop screen
+@media (min-width: $screen-lg-min) {
+  .panel {
+    .panel-heading {
+      font-size: 20px;
+    }
+  }
+}
+
+// Wide screen desktop
+@media (min-width: $screen-wide-min) {
+  .panel {
+    .panel-heading {
+      font-size: 24px;
+    }
+  }
 }
