--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,15 +1,29 @@
+@import "bootstrap/variables";
+
 // grid
 $grid-gutter-width: 20px;
 
+$primary-bg-color: #1b1b1b;
+$secondary-bg-color: #424242;
+$light-bg-color: #565656;
+
+$primary-text-color: #eeeeee;
+$secondary-text-color: #a5a5a5;
+
 // colors
 $main-color: #1986ff;
-$default-bg-color: #f1f6f8;
+$default-bg-color: $primary-bg-color;
 $rocket-gray: #b7b7b7;
 $rocket-dark: #2D3239;
 $green: #9bb209;
 $red: #ff2b19;
 $negative-color: $red;
 $positive-color: $green;
+$white: #ffffff;
+
+$body-bg: $primary-bg-color !default;
+$panel-bg: $secondary-bg-color;
+$text-color: $primary-text-color;
 
 // spaces
 $space-small : 5px;
@@ -24,12 +38,12 @@ $font-size-normal: 30px;
 $font-size-small: 18px;
 
 // navbar
-$navbar-height: 40px;
+$navbar-height: 60px;
 $navbar-margin-bottom: 10px;
 
 // widget
 $widget-height: 260px;
-$widget-heading-color: darken($rocket-gray, 25%);
+$widget-heading-color: $secondary-text-color;
 $widget-border-color: #e5e5e5;
 
 // Charts
@@ -44,3 +58,16 @@ $chart-bar-fill: $main-color;
 
 // Override default bootstrap variables (https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_variables.scss)
 $panel-border-radius: 0;
+
+// Wide screen desktop
+// $screen-laptop:         1024px !default;
+// $screen-laptop-min:     $screen-laptop !default;
+// $screen-md-max:       ($screen-laptop-min - 1) !default;
+
+// $screen-laptop-max: ($screen-lg-min - 1) !default;
+
+// Wide screen desktop
+$screen-wide:         1440px !default;
+$screen-wide-min:     $screen-wide !default;
+$screen-wide-desktop: $screen-wide-min !default;
+$screen-lg-max:       ($screen-wide-min - 1) !default;
