Added functionality to choose which widget to display.

--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -42,3 +42,18 @@
     }
   }
 }
+
+@media (max-width: $screen-xs-max) {
+  .navbar-right {
+    line-height: 60px;
+  }
+
+  ul {
+    font-size: 19px;
+  }
+
+  .nav > li {
+    float: left;
+    margin-left: 8px;
+  }
+}
