Git widget prototype

--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -48,6 +48,10 @@
       width: 40px;
       margin-top: 0;
     }
+    .logo.github {
+      width: 32px;
+      margin-top: -4px;
+    }
 
     .panel-title-text {
       display: inline-block;
@@ -120,6 +124,10 @@
         width: 88px;
         margin-top: 0;
       }
+      .logo.github {
+        width: 100px;
+        margin-top: -10px;
+      }
     }
 
     .panel-body {
@@ -166,6 +174,10 @@
         width: 35px;
         margin-top: 0;
       }
+      .logo.github {
+        width: 23px;
+        margin-top: -4px;
+      }
     }
   }
 }
@@ -199,6 +211,10 @@
         width: 28px;
         margin-top: -3px;
       }
+      .logo.github {
+        width: 28px;
+        margin-top: -3px;
+      }
     }
   }
 }
@@ -229,6 +245,10 @@
         margin-top: 1px;
       }
       .logo.weather {
+        width: 32px;
+        margin-top: 0;
+      }
+      .logo.github {
         width: 32px;
         margin-top: 0;
       }
