Added full screen mode with auto slider.

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,5 @@
 @import "./sass/scaffolding";
 @import "./sass/panels";
 @import "./sass/navbar";
+@import "./sass/full-screen";
+@import "./sass/slick-slider";
