--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -36,6 +36,7 @@ $font-size-huge: 124px;
 $font-size-big: 48px;
 $font-size-normal: 30px;
 $font-size-small: 18px;
+$font-size-fullscreen: 425px;
 
 // navbar
 $navbar-height: 60px;
