--- a/src/widgets/Number/components/Number.scss
+++ b/src/widgets/Number/components/Number.scss
@@ -38,3 +38,12 @@
     }
   }
 }
+
+*:fullscreen {
+  .Number {
+    .current {
+      font-size: $font-size-fullscreen;
+      line-height: 1.5;
+    }
+  }
+}
