Re-factored history widget and added StatusCake history widget.
Added unit test for status cake service.

--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -44,6 +44,9 @@
       width: 32px;
       margin-top: -4px;
     }
+    .logo.statuscake {
+      width: 150px;
+    }
     .logo.twitter {
       width: 40px;
       margin-top: 0;
@@ -119,6 +122,9 @@
       .logo.weather {
         width: 100px;
         margin-top: -10px;
+      }
+      .logo.statuscake {
+        width: 300px;
       }
       .logo.twitter {
         width: 88px;
