--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -37,6 +37,7 @@ $font-size-big: 48px;
 $font-size-normal: 30px;
 $font-size-small: 18px;
 $font-size-fullscreen: 425px;
+$font-size-fullscreen-text: 75px;
 
 // navbar
 $navbar-height: 60px;
