--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -55,6 +55,10 @@
       width: 32px;
       margin-top: -4px;
     }
+    .logo.instagram {
+      width: 32px;
+      margin-top: -4px;
+    }
 
     .panel-title-text {
       display: inline-block;
@@ -134,6 +138,10 @@
         width: 100px;
         margin-top: -10px;
       }
+      .logo.instagram {
+        width: 100px;
+        margin-top: -10px;
+      }
     }
 
     .panel-body {
@@ -184,6 +192,10 @@
         width: 23px;
         margin-top: -4px;
       }
+      .logo.instagram {
+        width: 23px;
+        margin-top: -4px;
+      }
     }
   }
 }
@@ -221,6 +233,10 @@
         width: 28px;
         margin-top: -3px;
       }
+      .logo.instagram {
+        width: 28px;
+        margin-top: -3px;
+      }
     }
   }
 }
@@ -255,6 +271,10 @@
         margin-top: 0;
       }
       .logo.github {
+        width: 32px;
+        margin-top: 0;
+      }
+      .logo.instagram {
         width: 32px;
         margin-top: 0;
       }
